add mobile theme

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -19,6 +19,6 @@
 		= f.password_field :password_confirmation
 
 	%div
-		= f.submit "Sign up"
+		= f.submit "Sign Up"
 
 = render "devise/shared/links"
