--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -68,6 +68,7 @@ table{border-collapse:collapse;border-spacing:0;}form label{
 }
 form.contact-form{margin-bottom:20px;}
 form input[type=text],
+form input[type=email],
 form input[type=password],textarea{
 	-webkit-appearance:none;
 	-moz-appearance:none;
@@ -91,11 +92,13 @@ form input[type=submit]{
 }
 form input[type=submit],
 form input[type=text],
+form input[type=email],
 form input[type=password],
 form textarea{
 	padding:5px;
 }
 form input[type=text],
+form input[type=email],
 form input[type=password],
 form textarea,
 form input[type=submit]{
