--- a/app/views/home/welcome.html.haml
+++ b/app/views/home/welcome.html.haml
@@ -1,2 +1,6 @@
-%h1 Home#welcome
-%p Find me in app/views/home/welcome.html.haml
+%aside
+	%ul{class:'menu'}
+		%li 
+			= button_to  'Home', root_path, method:'get'
+		%li 
+			= button_to  'Sign Out', destroy_user_session_path, method:'delete'		
