--- a/app/views/home/welcome.html.haml
+++ b/app/views/home/welcome.html.haml
@@ -3,4 +3,6 @@
 		%li 
 			= button_to  'Home', root_path, method:'get'
 		%li 
+			= button_to  'Projects', root_path, method:'get'
+		%li 
 			= button_to  'Sign Out', destroy_user_session_path, method:'delete'		
