--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,8 @@
 			%header{class:'header'}
 				#title
 					%h2 Online Dictionary
+					%p 
+						= render_breadcrumbs
 				.menu-but
 					=link_to image_tag('mobile/menu.png'), '#menu'
 				%br{class:'clearfix'}
