--- a/app/views/home/welcome.html.haml
+++ b/app/views/home/welcome.html.haml
@@ -1,8 +1,6 @@
 %aside
 	%ul{class:'menu'}
 		%li 
-			= button_to  'Home', root_path, method:'get'
-		%li 
-			= button_to  'Projects', root_path, method:'get'
+			= button_to  'Projects', projects_path, method:'get'
 		%li 
 			= button_to  'Sign Out', destroy_user_session_path, method:'delete'		
