--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -10,7 +10,7 @@
   - @projects.each do |project|
     %tr
       %td= project.title
-      %td= link_to 'Show', project
+      %td= link_to 'Open', project_vocabularies_path(project)
       %td= link_to 'Edit', edit_project_path(project)
       %td= link_to 'Destroy', project, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
